--- a/index.html
+++ b/index.html
@@ -319,30 +319,46 @@ gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexTextureCoordBuffer);
     auxTime = now;
   }
 
+int tFilter = 1;
+function textureFilter(){
+document.addEventListener("keydown", (ev) => {
+
+  if (ev.key === "1") {
+    tFilter = 1;
+  }
+
+  if (ev.key === "2") {
+    tFilter = 2;
+  }
+
+  if (ev.key === "3") {
+    tFilter = 3;
+  }
+});
+}
+	
 function textureConfig(texture) {
     gl.bindTexture(gl.TEXTURE_2D, texture);
     gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-    /* //OPCION 1. NEAREST
+
+	if (tFilter == 1){
+	 //OPCION 1. NEAREST
     gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.NEAREST);
     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.NEAREST);
     gl.bindTexture(gl.TEXTURE_2D, null);
-    */
-
-
+	}else if (tFilter == 2){
     //OPCION 2. LINEAR
-    /*gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
+    gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-    */
-
-
-    //OPCION 3. MIPMAPS
+	}else if (tFilter == 3) {
+	//OPCION 3. MIPMAPS
     gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR_MIPMAP_NEAREST);
     gl.generateMipmap(gl.TEXTURE_2D);
-
+	}
 
 
 
@@ -394,3 +410,4 @@ function drawStep() {
     <canvas id="miCanvas" width="500" height="500"></canvas>
 </body>
 </html>
+
