--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexTextureCoordBuffer);
     auxTime = now;
   }
 
-int tFilter = 1;
+var tFilter = 1;
 function textureFilter(){
 document.addEventListener("keydown", (ev) => {
 
@@ -410,4 +410,5 @@ function drawStep() {
     <canvas id="miCanvas" width="500" height="500"></canvas>
 </body>
 </html>
+
 
